--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -10,14 +10,14 @@ Collapsed=0
 
 [Window][##dockspace]
 Pos=0,0
-Size=2560,1377
+Size=1707,995
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=428,903
+Size=698,324
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
 
 [Window][TestPanel1]
 Pos=117,368
@@ -50,14 +50,14 @@ Size=1480,913
 Collapsed=0
 
 [Window][Shader Editor##1]
-Pos=430,19
-Size=2130,903
+Pos=0,345
+Size=698,322
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][Asset Browser##2]
-Pos=0,924
-Size=2560,453
+Pos=0,669
+Size=1707,326
 Collapsed=0
 DockId=0x00000005,0
 
@@ -66,10 +66,18 @@ Pos=255,197
 Size=825,350
 Collapsed=0
 
+[Window][Scene View##3]
+Pos=700,19
+Size=1007,648
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockSpace     ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=2560,1358 Split=Y NoWindowMenuButton=1
-  DockNode    ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,649 Split=X NoWindowMenuButton=1
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=428,977 NoWindowMenuButton=1 Selected=0xE927CF2F
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=2130,977 CentralNode=1 NoWindowMenuButton=1 Selected=0x47F63A4B
-  DockNode    ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,326 NoWindowMenuButton=1 Selected=0x6AB70705
+DockSpace       ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,976 Split=Y NoWindowMenuButton=1
+  DockNode      ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,649 Split=X NoWindowMenuButton=1
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=698,977 Split=Y NoWindowMenuButton=1 Selected=0xE927CF2F
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=433,324 NoWindowMenuButton=1 Selected=0xE927CF2F
+      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=433,322 NoWindowMenuButton=1 Selected=0x47F63A4B
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1007,977 CentralNode=1 NoWindowMenuButton=1 Selected=0x16610708
+  DockNode      ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,326 NoWindowMenuButton=1 Selected=0x6AB70705
 
