--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -14,10 +14,10 @@ Size=1707,995
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
-Size=764,324
+Pos=427,19
+Size=429,640
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000008,0
 
 [Window][TestPanel1]
 Pos=117,368
@@ -50,14 +50,14 @@ Size=1480,913
 Collapsed=0
 
 [Window][Shader Editor##1]
-Pos=0,345
-Size=764,322
+Pos=0,19
+Size=425,640
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000006,0
 
 [Window][Asset Browser##2]
-Pos=0,669
-Size=1707,326
+Pos=0,661
+Size=856,334
 Collapsed=0
 DockId=0x00000005,0
 
@@ -67,17 +67,17 @@ Size=825,350
 Collapsed=0
 
 [Window][Scene View##3]
-Pos=766,19
-Size=941,648
+Pos=858,19
+Size=849,976
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace       ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,976 Split=Y NoWindowMenuButton=1
-  DockNode      ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,649 Split=X NoWindowMenuButton=1
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=764,977 Split=Y NoWindowMenuButton=1 Selected=0xE927CF2F
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=433,324 NoWindowMenuButton=1 Selected=0xE927CF2F
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=433,322 NoWindowMenuButton=1 Selected=0x47F63A4B
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=941,977 CentralNode=1 NoWindowMenuButton=1 Selected=0x16610708
-  DockNode      ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,326 NoWindowMenuButton=1 Selected=0x6AB70705
+DockSpace       ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,976 Split=X NoWindowMenuButton=1
+  DockNode      ID=0x00000001 Parent=0x3F20F338 SizeRef=856,976 Split=Y NoWindowMenuButton=1
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1707,640 Split=X NoWindowMenuButton=1
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=425,640 NoWindowMenuButton=1 Selected=0x47F63A4B
+      DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=429,640 CentralNode=1 NoWindowMenuButton=1 Selected=0xE927CF2F
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=1707,334 NoWindowMenuButton=1 Selected=0x6AB70705
+  DockNode      ID=0x00000004 Parent=0x3F20F338 SizeRef=849,976 NoWindowMenuButton=1 Selected=0x16610708
 
