Camera Control & DirectStorage

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -10,12 +10,12 @@ Collapsed=0
 
 [Window][##dockspace]
 Pos=0,0
-Size=1707,995
+Size=1707,996
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=427,19
-Size=429,640
+Pos=543,19
+Size=1164,641
 Collapsed=0
 DockId=0x00000008,0
 
@@ -51,13 +51,13 @@ Collapsed=0
 
 [Window][Shader Editor##1]
 Pos=0,19
-Size=425,640
+Size=541,641
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Asset Browser##2]
-Pos=0,661
-Size=856,334
+Pos=0,662
+Size=1707,334
 Collapsed=0
 DockId=0x00000005,0
 
@@ -67,17 +67,15 @@ Size=825,350
 Collapsed=0
 
 [Window][Scene View##3]
-Pos=858,19
-Size=849,976
+Pos=543,19
+Size=1164,641
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000008,1
 
 [Docking][Data]
-DockSpace       ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,976 Split=X NoWindowMenuButton=1
-  DockNode      ID=0x00000001 Parent=0x3F20F338 SizeRef=856,976 Split=Y NoWindowMenuButton=1
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1707,640 Split=X NoWindowMenuButton=1
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=425,640 NoWindowMenuButton=1 Selected=0x47F63A4B
-      DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=429,640 CentralNode=1 NoWindowMenuButton=1 Selected=0xE927CF2F
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=1707,334 NoWindowMenuButton=1 Selected=0x6AB70705
-  DockNode      ID=0x00000004 Parent=0x3F20F338 SizeRef=849,976 NoWindowMenuButton=1 Selected=0x16610708
+DockSpace     ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,977 Split=Y NoWindowMenuButton=1
+  DockNode    ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,640 Split=X NoWindowMenuButton=1
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=541,640 NoWindowMenuButton=1 Selected=0x47F63A4B
+    DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=1164,640 CentralNode=1 NoWindowMenuButton=1 Selected=0x16610708
+  DockNode    ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,334 NoWindowMenuButton=1 Selected=0x6AB70705
 
